--- a/components/dashboard.html
+++ b/components/dashboard.html
@@ -60,7 +60,7 @@
     <link rel="next" href="checkbox-input.html" />
     
     
-    <link rel="prev" href="color-picker.md" />
+    <link rel="prev" href="color-picker.html" />
     
 
     </head>
@@ -155,6 +155,19 @@
             
         </li>
     
+        <li class="chapter " data-level="1.3.3" data-path="../first-lesson.html">
+            
+                <a href="../first-lesson.html">
+            
+                    
+                    A first ISLE Lesson
+            
+                </a>
+            
+
+            
+        </li>
+    
 
             </ul>
             
@@ -174,9 +187,9 @@
             <ul class="articles">
                 
     
-        <li class="chapter " data-level="1.4.1" data-path="color-picker.md">
+        <li class="chapter " data-level="1.4.1" data-path="color-picker.html">
             
-                <span>
+                <a href="color-picker.html">
             
                     
                     Color Picker
@@ -227,9 +240,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.2.3" data-path="select-input.md">
+        <li class="chapter " data-level="1.4.2.3" data-path="select-input.html">
             
-                <span>
+                <a href="select-input.html">
             
                     
                     Select Input
@@ -284,9 +297,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.4" data-path="expire.md">
+        <li class="chapter " data-level="1.4.4" data-path="expire.html">
             
-                <span>
+                <a href="expire.html">
             
                     
                     Expire
@@ -667,7 +680,7 @@
 
             
                 
-                <a href="color-picker.md" class="navigation navigation-prev " aria-label="Previous page: Color Picker">
+                <a href="color-picker.html" class="navigation navigation-prev " aria-label="Previous page: Color Picker">
                     <i class="fa fa-angle-left"></i>
                 </a>
                 
@@ -683,7 +696,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Dashboard","level":"1.4.2","depth":2,"next":{"title":"Checkbox Input","level":"1.4.2.1","depth":3,"path":"components/checkbox-input.md","ref":"components/checkbox-input.md","articles":[]},"previous":{"title":"Color Picker","level":"1.4.1","depth":2,"path":"components/color-picker.md","ref":"components/color-picker.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"highlight":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/dashboard.md","mtime":"2016-09-27T14:11:18.883Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2016-11-11T08:15:33.766Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Dashboard","level":"1.4.2","depth":2,"next":{"title":"Checkbox Input","level":"1.4.2.1","depth":3,"path":"components/checkbox-input.md","ref":"components/checkbox-input.md","articles":[]},"previous":{"title":"Color Picker","level":"1.4.1","depth":2,"path":"components/color-picker.md","ref":"components/color-picker.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"highlight":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/dashboard.md","mtime":"2016-09-27T14:11:18.883Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2016-11-11T08:22:08.581Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
