--- a/components/free-text-question.html
+++ b/components/free-text-question.html
@@ -640,6 +640,25 @@
                                 <section class="normal markdown-section">
                                 
                                 <h1 id="free-text-question">Free Text Question</h1>
+<p>An ISLE component for questions where the answers by the students should be supplied in the form of free text.</p>
+<p>Example:</p>
+<pre><code class="lang-html"><span class="hljs-tag">&lt;<span class="hljs-name">FreeTextQuestion</span> 
+    <span class="hljs-attr">question</span>=<span class="hljs-string">&quot;What is the p-value your obtained for this test?&quot;</span> 
+    <span class="hljs-attr">rows</span>=<span class="hljs-string">{1}</span> 
+    <span class="hljs-attr">solution</span>=<span class="hljs-string">&quot;1.476303e-05&quot;</span> 
+/&gt;</span>
+</code></pre>
+<p>Options:</p>
+<ul>
+<li><strong>question</strong>: the question displayed at the top of the free text question component.</li>
+<li><strong>hints</strong>: an <code>Array</code> of <code>strings</code> providing guidance on how to answer the question. Default: <code>[]</code>.</li>
+<li><strong>onChange</strong>: callback <code>function</code> invoked every time the text area value changes. Default: <code>null</code>.</li>
+<li><strong>resizable</strong>: <code>boolean</code> controlling whether the text area should be resizable. Default: <code>none</code>.</li>
+<li><strong>rows</strong>: <code>number</code> of rows of the text field for students to type their answers into. Default: <code>5</code>.</li>
+<li><strong>solution</strong>: a <code>string</code> giving a model answer to the problem. Default: <code>&apos;&apos;</code>.</li>
+<li><strong>submissionMsg</strong>: <code>string</code> which is displayed as a notification when the learner first submits his answer. Default: <code>Compare your answer with solution using the &quot;Show Solution&quot; button. You can then change your answer and re-submit if necessary.</code>.</li>
+<li><strong>resubmissionMsg</strong>: <code>string</code> which is displayed as a notification for all submissions after the first one. Default: <code>You have successfully re-submitted your answer.</code>.</li>
+</ul>
 
                                 
                                 </section>
@@ -683,7 +702,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Free Text Question","level":"1.4.6","depth":2,"next":{"title":"Grid","level":"1.4.7","depth":2,"path":"components/grid.md","ref":"components/grid.md","articles":[]},"previous":{"title":"Feedback Buttons","level":"1.4.5","depth":2,"path":"components/feedback.md","ref":"components/feedback.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"highlight":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/free-text-question.md","mtime":"2016-11-11T08:24:48.848Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2016-11-11T09:07:48.852Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Free Text Question","level":"1.4.6","depth":2,"next":{"title":"Grid","level":"1.4.7","depth":2,"path":"components/grid.md","ref":"components/grid.md","articles":[]},"previous":{"title":"Feedback Buttons","level":"1.4.5","depth":2,"path":"components/feedback.md","ref":"components/feedback.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"highlight":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/free-text-question.md","mtime":"2016-11-17T06:36:59.118Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2016-11-17T06:40:44.940Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
