--- a/components/density-plot.html
+++ b/components/density-plot.html
@@ -17,7 +17,7 @@
     
             
                 
-                <link rel="stylesheet" href="../gitbook/gitbook-plugin-highlight/website.css">
+                <link rel="stylesheet" href="../gitbook/gitbook-plugin-prism/prism.css">
                 
             
                 
@@ -642,12 +642,12 @@
                                 <h1 id="density-plot">Density Plot</h1>
 <p>ISLE component to generate a density plot for one or multiple data sets.</p>
 <h4 id="example">Example:</h4>
-<pre><code class="lang-html"><span class="hljs-tag">&lt;<span class="hljs-name">DensityPlot</span>
-    <span class="hljs-attr">data</span>=<span class="hljs-string">{[</span> <span class="hljs-attr">40</span>, <span class="hljs-attr">80</span>, <span class="hljs-attr">20</span>, <span class="hljs-attr">30</span>, <span class="hljs-attr">50</span>, <span class="hljs-attr">30</span>, <span class="hljs-attr">40</span>, <span class="hljs-attr">10</span>, <span class="hljs-attr">20</span>, <span class="hljs-attr">10</span>, <span class="hljs-attr">20</span>, <span class="hljs-attr">20</span> ]}
-    <span class="hljs-attr">xmin</span>=<span class="hljs-string">{0}</span>
-    <span class="hljs-attr">xmax</span>=<span class="hljs-string">{100}</span>
-    <span class="hljs-attr">ymax</span>=<span class="hljs-string">{0.5}</span>
-/&gt;</span>
+<pre><code class="lang-html"><span class="token tag"><span class="token tag"><span class="token punctuation">&lt;</span>DensityPlot</span>
+    <span class="token attr-name">data</span><span class="token attr-value"><span class="token punctuation">=</span>{[</span> <span class="token attr-name">40,</span> <span class="token attr-name">80,</span> <span class="token attr-name">20,</span> <span class="token attr-name">30,</span> <span class="token attr-name">50,</span> <span class="token attr-name">30,</span> <span class="token attr-name">40,</span> <span class="token attr-name">10,</span> <span class="token attr-name">20,</span> <span class="token attr-name">10,</span> <span class="token attr-name">20,</span> <span class="token attr-name">20</span> <span class="token attr-name">]}</span>
+    <span class="token attr-name">xmin</span><span class="token attr-value"><span class="token punctuation">=</span>{0}</span>
+    <span class="token attr-name">xmax</span><span class="token attr-value"><span class="token punctuation">=</span>{100}</span>
+    <span class="token attr-name">ymax</span><span class="token attr-value"><span class="token punctuation">=</span>{0.5}</span>
+<span class="token punctuation">/&gt;</span></span>
 </code></pre>
 <h4 id="options">Options</h4>
 <ul>
@@ -703,7 +703,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Density Plot","level":"1.4.11.2","depth":3,"next":{"title":"R Plot","level":"1.4.11.3","depth":3,"path":"components/r-plot.md","ref":"components/r-plot.md","articles":[]},"previous":{"title":"Function Plot","level":"1.4.11.1","depth":3,"path":"components/function-plot.md","ref":"components/function-plot.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"highlight":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/density-plot.md","mtime":"2016-11-17T06:42:53.002Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2016-11-17T20:28:08.449Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Density Plot","level":"1.4.11.2","depth":3,"next":{"title":"R Plot","level":"1.4.11.3","depth":3,"path":"components/r-plot.md","ref":"components/r-plot.md","articles":[]},"previous":{"title":"Function Plot","level":"1.4.11.1","depth":3,"path":"components/function-plot.md","ref":"components/function-plot.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/density-plot.md","mtime":"2016-11-17T06:42:53.002Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2016-11-17T20:36:08.453Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
