--- a/components/timer.html
+++ b/components/timer.html
@@ -17,7 +17,7 @@
     
             
                 
-                <link rel="stylesheet" href="../gitbook/gitbook-plugin-highlight/website.css">
+                <link rel="stylesheet" href="../gitbook/gitbook-plugin-prism/prism.css">
                 
             
                 
@@ -642,14 +642,14 @@
                                 <h1 id="timer">Timer</h1>
 <p>The Timer component provides a timer that will trigger a predefined callback when the time is up. An example use case is for the timing of quizzes.</p>
 <h4 id="example">Example:</h4>
-<pre><code class="lang-html"><span class="hljs-tag">&lt;<span class="hljs-name">Timer</span> 
-  <span class="hljs-attr">id</span>=<span class="hljs-string">&apos;test-quiz&apos;</span>
-  <span class="hljs-attr">active</span>=<span class="hljs-string">{true}</span> 
-  <span class="hljs-attr">duration</span>=<span class="hljs-string">{50}</span> 
-  <span class="hljs-attr">onTimeUp</span>=<span class="hljs-string">{function(){</span>
-    <span class="hljs-attr">console.log</span>(&apos;<span class="hljs-attr">done</span>&apos;);
-  }}
-/&gt;</span>
+<pre><code class="lang-html"><span class="token tag"><span class="token tag"><span class="token punctuation">&lt;</span>Timer</span> 
+  <span class="token attr-name">id</span><span class="token attr-value"><span class="token punctuation">=</span><span class="token punctuation">&apos;</span>test-quiz<span class="token punctuation">&apos;</span></span>
+  <span class="token attr-name">active</span><span class="token attr-value"><span class="token punctuation">=</span>{true}</span> 
+  <span class="token attr-name">duration</span><span class="token attr-value"><span class="token punctuation">=</span>{50}</span> 
+  <span class="token attr-name">onTimeUp</span><span class="token attr-value"><span class="token punctuation">=</span>{function(){</span>
+    <span class="token attr-name">console.log(&apos;done&apos;);</span>
+  <span class="token attr-name">}}</span>
+<span class="token punctuation">/&gt;</span></span>
 </code></pre>
 <h4 id="options">Options</h4>
 <ul>
@@ -701,7 +701,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Timer","level":"1.4.18","depth":2,"next":{"title":"LaTeX Equations","level":"1.4.19","depth":2,"path":"components/latex.md","ref":"components/latex.md","articles":[]},"previous":{"title":"Switch","level":"1.4.17","depth":2,"path":"components/switch.md","ref":"components/switch.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"highlight":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/timer.md","mtime":"2016-11-17T06:47:19.908Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2016-11-17T20:28:08.449Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Timer","level":"1.4.18","depth":2,"next":{"title":"LaTeX Equations","level":"1.4.19","depth":2,"path":"components/latex.md","ref":"components/latex.md","articles":[]},"previous":{"title":"Switch","level":"1.4.17","depth":2,"path":"components/switch.md","ref":"components/switch.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/timer.md","mtime":"2016-11-17T06:47:19.908Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2016-11-17T20:36:08.453Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
