--- a/components/video-player.html
+++ b/components/video-player.html
@@ -17,7 +17,7 @@
     
             
                 
-                <link rel="stylesheet" href="../gitbook/gitbook-plugin-highlight/website.css">
+                <link rel="stylesheet" href="../gitbook/gitbook-plugin-prism/prism.css">
                 
             
                 
@@ -642,10 +642,10 @@
                                 <h1 id="video-player">Video Player</h1>
 <p>A component for playing media files and content from YouTube, SoundCloud and Vimeo.</p>
 <h4 id="example">Example:</h4>
-<pre><code class="lang-html"><span class="hljs-tag">&lt;<span class="hljs-name">VideoPlayer</span>
-    <span class="hljs-attr">url</span>=<span class="hljs-string">&quot;https://www.youtube.com/watch?v=UzxYlbK2c7E&quot;</span>
-    <span class="hljs-attr">playing</span>
-/&gt;</span>
+<pre><code class="lang-html"><span class="token tag"><span class="token tag"><span class="token punctuation">&lt;</span>VideoPlayer</span>
+    <span class="token attr-name">url</span><span class="token attr-value"><span class="token punctuation">=</span><span class="token punctuation">&quot;</span>https://www.youtube.com/watch?v<span class="token punctuation">=</span>UzxYlbK2c7E<span class="token punctuation">&quot;</span></span>
+    <span class="token attr-name">playing</span>
+<span class="token punctuation">/&gt;</span></span>
 </code></pre>
 <h4 id="options">Options</h4>
 <ul>
@@ -699,7 +699,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Video Player","level":"1.4.20","depth":2,"next":{"title":"Publishing Lessons","level":"1.5","depth":1,"path":"packaging.md","ref":"packaging.md","articles":[]},"previous":{"title":"LaTeX Equations","level":"1.4.19","depth":2,"path":"components/latex.md","ref":"components/latex.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"highlight":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/video-player.md","mtime":"2016-11-17T06:47:26.000Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2016-11-17T20:28:08.449Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Video Player","level":"1.4.20","depth":2,"next":{"title":"Publishing Lessons","level":"1.5","depth":1,"path":"packaging.md","ref":"packaging.md","articles":[]},"previous":{"title":"LaTeX Equations","level":"1.4.19","depth":2,"path":"components/latex.md","ref":"components/latex.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/video-player.md","mtime":"2016-11-17T06:47:26.000Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2016-11-17T20:36:08.453Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
