--- a/app/app.global.css
+++ b/app/app.global.css
@@ -1,8 +1,17 @@
 html {
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	padding: 0;
 	overflow: hidden;
 }
 
-body, h1, h2, h3, h4, h5, h6 {
+body {
+	height: 100%;
+	font-family:Source Sans Pro, Helvetica Neue,Helvetica,sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
 	font-family:Source Sans Pro, Helvetica Neue,Helvetica,sans-serif;
 }
 
