Add unselectable class

--- a/app/css/lesson.css
+++ b/app/css/lesson.css
@@ -73,3 +73,11 @@ body {
 	right: 0;
 	margin: 'auto';
 }
+
+.unselectable {
+    -moz-user-select: -moz-none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+}
