Add date selection for action log

--- a/app/css/lesson.css
+++ b/app/css/lesson.css
@@ -24,6 +24,24 @@ body {
 	text-shadow: none;
 }
 
+#Lesson .DateInput {
+	padding: 0px;
+	font-size: 12px;
+	line-height: 12px;
+	width: inherit;
+}
+
+#Lesson .DateRangePickerInput {
+	height: 22px;
+	border: none;
+}
+
+#Lesson .DateRangePickerInput__arrow svg {
+	width: 16px;
+	height: 16px;
+	vertical-align: initial;
+}
+
 #Lesson .statusbar {
 	position: absolute;
 	width: 34%;
