--- a/app/components/switch/switch.css
+++ b/app/components/switch/switch.css
@@ -1,4 +1,12 @@
 .switch {
+	transition: all 0.2s ease-in-out;
 	cursor: pointer;
-	display: inline;
+	display: inline-block;
+	height: auto;
+	width: auto;
+}
+
+.switch:hover {
+	transform: scale(1.05);
+	color: darkcyan;
 }
