--- a/components/grid.html
+++ b/components/grid.html
@@ -388,7 +388,20 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11" data-path="plots.html">
+        <li class="chapter " data-level="1.4.11" data-path="pages.html">
+            
+                <a href="pages.html">
+            
+                    
+                    Pages
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.12" data-path="plots.html">
             
                 <a href="plots.html">
             
@@ -402,7 +415,7 @@
             <ul class="articles">
                 
     
-        <li class="chapter " data-level="1.4.11.1" data-path="density-plot.html">
+        <li class="chapter " data-level="1.4.12.1" data-path="density-plot.html">
             
                 <a href="density-plot.html">
             
@@ -415,7 +428,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.2" data-path="r-plot.html">
+        <li class="chapter " data-level="1.4.12.2" data-path="r-plot.html">
             
                 <a href="r-plot.html">
             
@@ -433,7 +446,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.12" data-path="proportions-survey.html">
+        <li class="chapter " data-level="1.4.13" data-path="proportions-survey.html">
             
                 <a href="proportions-survey.html">
             
@@ -446,7 +459,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.13" data-path="r-help.html">
+        <li class="chapter " data-level="1.4.14" data-path="r-help.html">
             
                 <a href="r-help.html">
             
@@ -459,7 +472,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.14" data-path="r-output.html">
+        <li class="chapter " data-level="1.4.15" data-path="r-output.html">
             
                 <a href="r-output.html">
             
@@ -472,7 +485,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.15" data-path="r-shell.html">
+        <li class="chapter " data-level="1.4.16" data-path="r-shell.html">
             
                 <a href="r-shell.html">
             
@@ -485,7 +498,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.16" data-path="r-table.html">
+        <li class="chapter " data-level="1.4.17" data-path="r-table.html">
             
                 <a href="r-table.html">
             
@@ -498,7 +511,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.17" data-path="slider.html">
+        <li class="chapter " data-level="1.4.18" data-path="slider.html">
             
                 <a href="slider.html">
             
@@ -511,7 +524,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.18" data-path="switch.html">
+        <li class="chapter " data-level="1.4.19" data-path="switch.html">
             
                 <a href="switch.html">
             
@@ -524,7 +537,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.19" data-path="text-area.html">
+        <li class="chapter " data-level="1.4.20" data-path="text-area.html">
             
                 <a href="text-area.html">
             
@@ -537,7 +550,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.20" data-path="text.html">
+        <li class="chapter " data-level="1.4.21" data-path="text.html">
             
                 <a href="text.html">
             
@@ -550,7 +563,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.21" data-path="timer.html">
+        <li class="chapter " data-level="1.4.22" data-path="timer.html">
             
                 <a href="timer.html">
             
@@ -563,7 +576,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.22" data-path="latex.html">
+        <li class="chapter " data-level="1.4.23" data-path="latex.html">
             
                 <a href="latex.html">
             
@@ -576,7 +589,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.23" data-path="video-player.html">
+        <li class="chapter " data-level="1.4.24" data-path="video-player.html">
             
                 <a href="video-player.html">
             
@@ -707,7 +720,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Grid","level":"1.4.7","depth":2,"next":{"title":"Lesson Submit","level":"1.4.8","depth":2,"path":"components/lesson-submit.md","ref":"components/lesson-submit.md","articles":[]},"previous":{"title":"Free Text Question","level":"1.4.6","depth":2,"path":"components/free-text-question.md","ref":"components/free-text-question.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/grid.md","mtime":"2016-12-28T20:12:48.327Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2017-09-13T21:56:24.650Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Grid","level":"1.4.7","depth":2,"next":{"title":"Lesson Submit","level":"1.4.8","depth":2,"path":"components/lesson-submit.md","ref":"components/lesson-submit.md","articles":[]},"previous":{"title":"Free Text Question","level":"1.4.6","depth":2,"path":"components/free-text-question.md","ref":"components/free-text-question.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/grid.md","mtime":"2016-12-28T20:12:48.327Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2017-12-24T16:33:19.592Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
